new content by jonathan

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
   <img id="imageHappyOfficeLargeScreen" src="Media/headerLarge4.png" alt="counselors in happy workplace">
   <img id="imageHappyOfficeIpad" src="Media/headerMedium3.png" alt="counselors in happy workplace">
   <header id="headerInImage">
-    <h1>Providing performance, stress management and 
-      mental fitness through portable, one-on-one 
-      sessions at work.
+    <h1>Providing better access to mental health support for our first 
+      responders by allowing them to take control of their own wellbeing.
     </h1>
     <button class="waves-effect waves-light" id="callToAction1" 
     onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScSCGs44IHHERbwjakgPnHZMelsR8QvCiA5jncPGLvSLzLr1A/viewform')">
@@ -62,14 +61,15 @@
 
 <div id="containerWeMaximize" class="containerSection">
   <h2 class="blackBorder">
-    We maximize performance, 
-    engagement and happiness
+      We help police officers and firefighters understand their own mental health.
   </h2>
   
   <p class="containerParagraphText">
-    Most people are “just fine.” They don’t think about managing their mental 
-    wellness, and that means that they are often disengaged at work. <em>That’s where we come in— we provide one-on-one counseling in the workplace 
-    to help all employees be their best selves and flourish.</em>
+      Police and firefighters have really challenging jobs. And today, we 
+      could be supporting their mental health better. 
+      That’s where we come in – we’re developing a <em>proprietary digital 
+      health app</em> that engages our first responders where they are, 
+      confidentially and anonymously.
   </p>
   
 </div>
@@ -82,63 +82,20 @@
   <div class="spacerStart"></div>
   <div id="containerButWait" class="containerSection">
     <h2 class="blackBorder">
-      But wait. Aren’t we doing 
-      just fine?
+      Our first responders deserve all the help we can give them
     </h2>
 
-    <p id="paragraphButWait" class="containerParagraphText">
-      <em>No we aren’t.</em> Increasing levels of stress are leading to turnover, 
-      absenteeism, low engagement, and loss of productivity at work. Even 
-      for those of us who want to do something about it, it’s impossible to find time.
+    <p id="paragraphButWait" class="containerParagraphText" style="padding-bottom: 4rem">
+        While departments often have resources to help officers 
+        and fire fighters, they are always looking for more ways to help, 
+        and they don’t know where to turn. Police and firefighters are 
+        dealing with major challenges because they <em>see traumas on a daily basis</em>.
     </p>
 
   </div>
 
-
-  <div id="problemContainer">
-    <div class="problemRow" id="problemRow1">
-      <div id="statBlock1" class="problemStatBlock" >
-        <img src="Media/stress-3.svg">
-        <h5 class="statHeader">
-          42%
-        </h5>
-        <p class="statDescr paragraph-smaller-text">
-          of employees 
-          have left a job 
-          due to stress
-        </p>
-      </div>
-    </div>
-
-    <div class="problemRow">
-      <div id="statBlock2" class="problemStatBlock">
-          <img src="Media/lazy-3.svg">
-        <h5 class="statHeader">
-          30%
-        </h5>
-        <p class="statDescr paragraph-smaller-text">
-          only 30% of 
-          employees are 
-          engaged at work
-        </p>
-      </div>
-    </div>
-
-    <div class="problemRow">
-      <div id="statBlock3" class="problemStatBlock">
-          <img src="Media/money-3.svg">
-        <h5 id="statHeaderBlock3" class="statHeader">
-          $300B
-        </h5>
-        <p class="statDescr paragraph-smaller-text">
-          estimated annual cost of 
-          stress for U.S. 
-          workplaces
-        </p>
-      </div>
-    </div>
-  </div>
 </div>
+
 <div id="approach" class="laptopLine"></div>
 
 <div id="containerOurApproach" class="containerSection">
@@ -147,11 +104,12 @@
   </h2>
   
   <p class="containerParagraphText">
-    We provide <em>one-on-one stress management, productivity improvement and happiness 
-    counseling</em> in the workplace. Our counselors have extensive experience in managing 
-    work-related concerns, and bring years of work helping people flourish. We use 
-    a unique set of tools in our conversations to help develop tactics and 
-    techniques that are effective even after our conversations stop.
+      We provide officers and firefighters with a 
+      <em>proprietary, anonymous and confidential</em> tool 
+      that lets them better track how they’re doing, 
+      especially after challenging situations. This 
+      first-of-its-kind tool is leading the charge 
+      for providing better support and earlier.
   </p>
 </div>
 
@@ -163,13 +121,12 @@
     <img src="Media/human.svg">
     <div class="h3HeadingContainer">
       <h3 class="h3Heading">
-          Human-centered
+          Specially-tailored
       </h3>
     </div>  
     <p class="ourApproachRowParagraph paragraph-smaller-text">
-        Workplace stress is best addressed with a human touch, and no technology can 
-        replace that. Our approach puts counselors in the heart of your office right 
-        where they make can make a difference.
+        Our tool is built specifically for first responders. 
+        Questions are specific, short, and useful.
     </p>
   </div>
 
@@ -177,26 +134,12 @@
     <img src="Media/science.svg">
     <div class="h3HeadingContainer">
       <h3 class="h3Heading">
-        Scientifically proven
+          Scientifically-sound
       </h3>
     </div>  
     <p class="ourApproachRowParagraph paragraph-smaller-text">
-      Our counselors are the best in the business, licensed and trained to leverage 
-      cutting-edge research in positive psychology, be it solution-focused therapy, 
-      cognitive behavioral therapy, or motivational interviewing.
-    </p>
-  </div>
-
-  <div class="containerBullet containerSection">
-    <img src="Media/fast.svg">
-    <div class="h3HeadingContainer">
-      <h3 class="h3Heading">
-        Fast and Effective
-      </h3>
-    </div>  
-    <p class="ourApproachRowParagraph paragraph-smaller-text">
-        Our solutions are designed to have a small number of sessions to allow all employees 
-        to take advantage of what we offer in the most efficient way, based on the demand of employees.
+        Our questions are based off proven screening tools, 
+        so there’s no guess work in keeping track of mental health.
     </p>
   </div>
 
@@ -204,13 +147,25 @@
     <img src="Media/personal.svg">
     <div class="h3HeadingContainer">
       <h3 class="h3Heading">
-        Personalized
+        Confidential and anonymous
       </h3>
     </div>  
     <p class="ourApproachRowParagraph paragraph-smaller-text">
-      Each client has their own needs, and we respect that. Our counselors are experts 
-      in learning about a company’s values and work culture, making our services highly 
-      tailored the client.
+        Officer and firefighters’ mental health is personal – 
+        so we don’t share any of our data. Ever.
+    </p>
+  </div>
+
+  <div class="containerBullet containerSection">
+    <img src="Media/fast.svg">
+    <div class="h3HeadingContainer">
+      <h3 class="h3Heading">
+        Actionable
+      </h3>
+    </div>  
+    <p class="ourApproachRowParagraph paragraph-smaller-text">
+        We help an officer or firefighter understand their own mental health, 
+        and push out recommendations to them based on what we find.
     </p>
   </div>
 
@@ -278,12 +233,11 @@
       </div>
     </div>
     <p id="noteFromFounders" >
-        "We are passionate about mental wellness and health because we have seen the impacts 
+        We are passionate about mental wellness and health because we have seen the impacts 
         of not taking care of our minds first-hand through family experiences. We want to 
-        make life better for everyone by supporting companies and employees in every way 
-        that we can. We aim to be the first call for HR whenever they or their employees 
-        need support, <em>making mental health seamless, convenient, and accessible</em> for everyone. 
-        We'd love to hear from you!"
+        provide better support to our first responders because <em>they’ve got our back, and 
+        we should have theirs</em>. We are looking to broaden the resources available for our 
+        nation’s heroes.
     </p>
   </div>
   
